--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </div>
 
     <!-- 主導航 -->
-    <header class="main-header py-3">
-        <div class="container">
-            <div class="row justify-content-between align-items-center">
+    <header class="main-header">
+        <div class="container h-100">
+            <div class="row justify-content-between align-items-center h-100">
                 <div class="col-md-4">
                     <div class="d-flex align-items-center">
                         <div class="logo me-2">💧</div>
@@ -151,15 +151,6 @@
 						<div class="service-name">緊急應變</div>
 					</div>
 				</div>
-				<!-- <div class="col-6 col-md-4 col-lg-3">
-					<div class="service-card" onclick="navigateToService('analysis')" 
-						 role="button" tabindex="0" onkeypress="handleKeyPress(event, 'analysis')">
-						<div class="service-icon">
-							<i class="fas fa-chart-line" style="color: #7829e0;"></i>
-						</div>
-						<div class="service-name">統計查詢</div>
-					</div>
-				</div> -->
 			</div>
         </section>
 		
@@ -214,7 +205,7 @@
                 'analysis': '統計查詢',
                 'emergency': '緊急應變',
                 'map': '系統地圖',
-                'chart': '數據圖譜',
+                'PID': '數據圖譜',
                 'panorama': '360環景'
             };
 
@@ -233,22 +224,6 @@
                 navigateToService(service);
             }
         }
-
-        // 搜尋功能
-        function handleSearch() {
-            const searchTerm = document.getElementById('searchInput').value;
-            if (searchTerm.trim()) {
-                alert(`搜尋關鍵字：${searchTerm}`);
-                // 實際應用中實現搜尋邏輯
-            }
-        }
-
-        // Enter 鍵搜尋
-        document.getElementById('searchInput').addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
-                handleSearch();
-            }
-        });
 
         // 頁面載入動畫
         document.addEventListener('DOMContentLoaded', function() {
