手機隱藏ＵＩ寬度資訊

--- a/simple-panels.html
+++ b/simple-panels.html
@@ -78,7 +78,7 @@
 					<div class="site-name">水網監測平台</div>
 				</div>
 			</div>
-			<div class="col-auto">
+			<div class="col-auto d-none d-sm-block">
 				<span id="panel1-width">50%</span>/
 				<span id="panel2-width">50%</span>
 				<button class="btn btn-primary btn-sm" onclick="resetPanels()">重置 50:50</button>
