--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
             // 這裡可以根據需要實現實際的頁面跳轉
             alert(`即將跳轉到：${serviceNames[service]}`);
-            window.location.href = `/page.html`;
+            window.location.href = `./page.html`;
         }
 
         // 處理鍵盤事件
