--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="action-btn btn-primary" onclick="navigateToService('chart')">
+                    <a href="#" class="action-btn btn-primary" onclick="navigateToService('PID')">
                         <i class="fas fa-chart-pie fs-2"></i>
                         <span class="fw-bold">圖譜</span>
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6">
-                    <a href="#" class="action-btn btn-warning" onclick="navigateToService('panorama')">
+                    <a href="#" class="action-btn btn-warning" onclick="navigateToService('surround')">
                         <i class="fas fa-street-view fs-2"></i>
                         <span class="fw-bold">360環景</span>
                     </a>
@@ -204,7 +204,7 @@
                 'emergency': '緊急應變',
                 'map': '系統地圖',
                 'PID': '數據圖譜',
-                'panorama': '360環景'
+                'surround': '360環景'
             };
 
             // 這裡可以根據需要實現實際的頁面跳轉
