--- a/index.html
+++ b/index.html
@@ -95,7 +95,17 @@
     <main class="container py-5 fade-in">
         <!-- 服務主題 -->
         <section class="mb-5">
-            <h2 class="section-title mb-4">服務主題</h2>
+            <div class="d-flex align-items-center mb-4">
+                <h2 class="section-title mb-0">服務主題</h2>
+                <div class="ms-auto">
+                    <div class="search-wrapper" style="width: 250px;">
+                        <input type="text" class="form-control pe-5" placeholder="搜尋監測站點、水質數據..." id="searchInput">
+                        <button class="search-btn">
+                            <i class="fas fa-search"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
             <div class="row g-3 mb-3">
                 <div class="col-6 col-md-4 col-lg-3">
                     <div class="service-card" onclick="navigateToService('supply')" 
