--- a/page.html
+++ b/page.html
@@ -37,45 +37,51 @@
 	
 	<!-- 主導航 -->
 	<header class="main-header">
+		<div class="main-header-title">
+			<div class="logo me-2">💧</div>
+			<div class="site-name">水網監測平台</div>
+		</div>
 		<div class="row justify-content-between align-items-center h-100 px-3">
 			<div class="col-auto">
-				<div class="dropdown">
-					<button class="btn btn-light border dropdown-toggle" type="button" data-bs-toggle="dropdown"
-						aria-expanded="false" style="border: 2px solid var(--primary-color)!important"><i
-							class="fa-solid fa-table me-1"></i>主題選擇</button>
-					<ul class="dropdown-menu">
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
-								<div class="badge bg-primary me-1">列表</div>供水
-							</a></li>
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
-								<div class="badge bg-primary me-1">列表</div>淨水
-							</a></li>
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
-								<div class="badge bg-primary me-1">列表</div>水質
-							</a></li>
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
-								<div class="badge bg-primary me-1">列表</div>分區計量
-							</a></li>
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
-								<div class="badge bg-primary me-1">列表</div>大表計量
-							</a></li>
-						<li>
-							<hr class="dropdown-divider">
-						</li>
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'map')">地圖</a></li>
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'PID')">圖譜</a></li>
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'surround')">環景</a></li>
-						<li>
-							<hr class="dropdown-divider">
-						</li>
-						<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'map')">緊急應變圖台</a></li>
-					</ul>
-				</div>
-			</div>
-			<div class="col-auto">
 				<div class="d-flex align-items-center">
-					<div class="logo me-2">💧</div>
-					<div class="site-name">水網監測平台</div>
+					<div class="dropdown me-3">
+						<button class="btn btn-light border dropdown-toggle" type="button" data-bs-toggle="dropdown"
+							aria-expanded="false" style="border: 2px solid var(--primary-color)!important"><i
+								class="fa-solid fa-table me-1"></i>主題選擇</button>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
+									<div class="badge bg-primary me-1">列表</div>供水
+								</a></li>
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
+									<div class="badge bg-primary me-1">列表</div>淨水
+								</a></li>
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
+									<div class="badge bg-primary me-1">列表</div>水質
+								</a></li>
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
+									<div class="badge bg-primary me-1">列表</div>分區計量
+								</a></li>
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'list')">
+									<div class="badge bg-primary me-1">列表</div>大表計量
+								</a></li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'map')">地圖</a></li>
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'PID')">圖譜</a></li>
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'surround')">環景</a></li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+							<li><a class="dropdown-item" href="#" onclick="switchTheme('panel1', 'map')">緊急應變圖台</a></li>
+						</ul>
+					</div>
+					<div class="search-wrapper" style="width: 250px;">
+						<input type="text" class="form-control pe-5" placeholder="搜尋監測站點、水質數據..." id="searchInput">
+						<button class="search-btn">
+							<i class="fas fa-search"></i>
+						</button>
+					</div>
 				</div>
 			</div>
 			<div class="col-auto d-none d-sm-block">
